[package]
name = "temi"
version = "0.1.2"
edition = "2021"
authors = ["Threadiverse developers"]
repository = "https://github.com/threadiverse/temi"
categories = ["command-line-interface", "command-line-utilities", "web-programming"]
description = "Command-line, lightweight TUI client for Lemmy"
keywords = ["lemmy", "threadiverse", "cli", "tui"]
license = "GPL-3.0-or-later"

[dependencies]
crossterm = "0.26"
hashbrown = "0.14"
http = "0.2"
lemmy_api_common = "0.18"
signal-hook = "0.3"

[dependencies.image]
version = "0.24"

[dependencies.tui]
version = "0.28"
package = "ratatui"

[dependencies.hyper]
version = "0.14"

[dependencies.hyper-tls]
version = "0.5"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.tokio]
version = "1"
features = ["full"]

[features]
debug_endpoints = []
